--- a/style.css
+++ b/style.css
@@ -121,3 +121,34 @@ button:focus-visible {
   margin-top: 20px;
   font-size: 2rem;
 }
+
+.win{
+  position: fixed;
+  left: 100%;
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  font-size: 10vw;
+  opacity: 0;
+  animation: text 0.6s ease-in-out infinite;
+  transition: all 0.3s ease-in-out;
+}
+
+
+@keyframes text {
+  50%{
+    transform: translateY(10%);
+  }
+  100%{
+    transform: translateY(-10%);
+  }
+  100%{
+    transform: translateY(0%);
+  }
+}
+
+.view {
+  left: 0;
+  opacity: 1;
+}
